# Redes_Neurais

./: README.md  pyproject.toml
aula_1/: MCP-Atividade-especificacao.ipynb  MCP-classificador-especificacao.ipynb
aula_2/: 02_02_arrays_e_imagens-especificacao.ipynb
aula_3/: aula_3.ipynb  especificacao.ipynb
aula_4/: 08-01-descida_do_gradiente_intro-especificacao.ipynb
aula_5/: linear_with_gd_especificacao.ipynb
aula_6/: especificacao.ipynb
aula_7/: 11-pytorch-e-cross-entropy.ipynb.ipynb  MLP-high.ipynb  backprop.ipynb  simple-gradient-descent-torch.ipynb
aula_8/: classificacao-diabetes.ipynb  classificacao-raio-x-especificacao.ipynb
