[project]
name = "redes-neurais"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "ipykernel==7.2.0",
    "matplotlib==3.10.9",
    "nbformat==5.10.4",
    "opencv-python==4.13.0.92",
    "plotly>=6.7.0",
    "requests==2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn==0.13.2",
]
