[project]
name = "redes-neurais"
version = "0.1.0"
description = "Projeto de Redes Neurais para a disciplina de TTI"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "kagglehub==1.0.1",
    "matplotlib==3.10.8",
    "opencv-python==4.13.0.92",
    "pandas==3.0.2",
    "requests==2.33.1",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "tqdm==4.67.3",
]
